--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 <body>
     <main>
-        
+        <!-- search bar starts -->
+        <section class=" py-3 border">
+            <h1 class="text-center fw-bold">Phone <span class="text-success">Finder</span></h1>
+            <div class="container">
+                <div class="input-group mx-auto border bg-primary bg-opacity-10 rounded-3 w-75">
+                    <input type="text" id="search-input" class="form-control border-primary" placeholder="Search Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button onclick="" class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
+                </div>
+            </div>
+        </section>
     </main>
     
     <!-- script link -->
