--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
             <div class="container">
                 <div class="input-group mx-auto border bg-primary bg-opacity-10 rounded-3 w-75">
                     <input type="text" id="search-input" class="form-control border-primary" placeholder="Search Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button onclick="" class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
+                    <button onclick="searchPhone()" class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
                 </div>
+            </div>
+        </section>
+
+        <!-- phone details starts -->
+        <section>
+            <div id="show-details" class="phone-details w-100" >
+
+            </div>
+        </section>
+
+        <!-- show phone part starts -->
+        <section>
+            <div class="container">
+                <div id="show-search-result" class="row"></div>
             </div>
         </section>
     </main>
