--- a/index.html
+++ b/index.html
@@ -1,45 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- style link -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/4cf13532ae.js" crossorigin="anonymous"></script>
     <title>Phone Finder</title>
 </head>
+
 <body>
     <main>
         <!-- search bar starts -->
-        <section class=" py-3 border">
-            <h1 class="text-center fw-bold">Phone <span class="text-success">Finder</span></h1>
-            <div class="container">
-                <div class="input-group mx-auto border bg-primary bg-opacity-10 rounded-3 w-75">
-                    <input type="text" id="search-input" class="form-control border-primary" placeholder="Search Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button onclick="searchPhone()" class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
+        <section>
+            <div class="search py-3 border">
+                <h1 class="display-5 text-center fw-bold">Phone <span class="text-primary">Finder</span></h1>
+                <div class="input-group mx-auto border bg-primary bg-opacity-10 rounded-3 w-50">
+                    <input type="text" id="search-input" class="form-control border-primary" placeholder="Search Phone"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button onclick="searchPhone()" class="btn btn-outline-primary" type="button"
+                        id="button-addon2">Search</button>
                 </div>
             </div>
         </section>
 
-        <!-- phone details starts -->
-        <section>
-            <div id="show-details" class="phone-details w-100" >
 
-            </div>
+        <!-- phone details starts -->
+        <section id="showDetails" class="phone-details w-100">
+
         </section>
 
         <!-- show phone part starts -->
-        <section>
-            <div class="container">
-                <div id="show-search-result" class="row"></div>
+        <section class="container search-result">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 my-3" id="show-search-result">
+
             </div>
+
+            <!-- spinner -->
+            <div id="spinner" class="d-flex d-none justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+
+            <!-- see more button -->
+            <div id="btn-btn" class=" py-3"></div>
         </section>
+
     </main>
-    
+
     <!-- script link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <script src="./js/app.js"></script>
 </body>
+
 </html>
